Fix aspect ratio on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -774,8 +774,9 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 400px;
   width: 400px;
+  max-width: 80vw;
+  aspect-ratio: 1 / 1;
 }
 
 @media (max-width: 767px) {
